adding debian support post fork

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 dependencies: []
 
 galaxy_info:
-  author: geerlingguy
+  author: msherron
   description: Varnish for Linux
   company: "Midwestern Mac, LLC"
   license: "license (BSD, MIT)"
